@@ -1,3 +1,8 @@
+droplet-1.03 (进行中)
+------------------------------------------------------------------------
+1.修复关闭子进程时，由于子进程已经退出（比如login脚本成功即自动退出）导致kill的时候发生异常的问题
+
+
 run-1.43
 ------------------------------------------------------------------------
 1.新增-ap特性：支持按照特定的group和tag来分配代理。现在-ap可以附加group，tag两个参数，同时兼容老用法
